syntax = "proto3";

package legacy;

message LegacyRunnerSettings {
  string setting_value = 1;
}
